--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -143,6 +143,7 @@
             font-family: Agency FB;
             font-weight: normal;
             font-size: 3em;
+            margin: auto;
             margin-top: 0.2em;
         }
     }
@@ -153,6 +154,36 @@
         margin-left: 7.5em;
         margin-top: 2em;
     }
+
+    .createForm{
+        margin-top: 6em;
+    }
+
+    .formAdmin{
+        margin-right: 8em;
+    }
+
+    .profile{
+        margin: auto;
+        font-size: 1.5em;
+        
+        h3{
+            margin-right: 15em;
+            text-align: center;
+        }
+        
+        h4{
+            margin-top: -2.5em;
+            margin-left: 10em;
+            text-align: center;
+        }
+    }
+
+    .error {
+        color: red;
+        text-align: center;
+        margin-left: 7em;
+}
 
 
 
