--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -9,6 +9,10 @@
         margin-right: 5em;
         width: 7em;
         height: 1.5em;
+        a{
+            text-decoration: none;
+            color: black;
+        }
     }
 
     #Nav-admin{
