--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -35,6 +35,10 @@
         margin-left: 10em;
         display: inline-block;
 //        border: red thin solid;
+        a{
+            text-decoration: none;
+            color: black;
+        }
         
     }
 
