--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -7,7 +7,7 @@
 
     #Logout{
         margin-right: 5em;
-        width: 7em;
+        width: 50em;
         height: 1.5em;
         a{
             text-decoration: none;
@@ -191,7 +191,12 @@
         color: red;
         text-align: center;
         margin-left: 7em;
-}
+    }
+
+    .items{
+        margin-top: 9em;
+    }
+
 
 
 
