--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -23,10 +23,12 @@
 //        margin-top: 1em;
     }
     
-    img{
-        width:26em;
-//        height: 5em;
-        margin: auto;
+    a{
+        img{
+            width:26em;
+    //        height: 5em;
+            margin: auto;            
+        }
     }
 }
 
