--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -766,6 +766,18 @@ section {
     .paperAd .buttonsEdit button:nth-child(2) {
       width: 8em;
       height: 2em; }
+    .paperAd .buttonsEdit a {
+      display: inline-block;
+      margin-top: 0.5em;
+      font-size: 1.1em;
+      text-decoration: none;
+      background-color: #EEEEEE;
+      color: #333333;
+      padding: 0.13em 0.55em 0.13em 0.38em;
+      border-top: 0.06em solid #CCCCCC;
+      border-right: 0.06em solid #333333;
+      border-bottom: 0.06em solid #333333;
+      border-left: 0.06em solid #CCCCCC; }
 
 .loginForm {
   height: 26em;
