--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -116,6 +116,20 @@
                 width: 8em;
                 height: 2em;
             }
+            
+            a{
+                display: inline-block;
+                margin-top: 0.5em;
+                font-size: 1.1em;
+                text-decoration: none;
+                background-color: #EEEEEE;
+                color: #333333;
+                padding: 0.13em 0.55em 0.13em 0.38em;
+                border-top: 0.06em solid #CCCCCC;
+                border-right: 0.06em solid #333333;
+                border-bottom: 0.06em solid #333333;
+                border-left: 0.06em solid #CCCCCC;
+            }
         }
     }
 
