--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -736,26 +736,38 @@ section {
     width: 9em;
     margin: 0.65em 0 0 2.5em;
     font-size: 1.5em; }
-    .paperAd .status span:nth-child(2) {
-      color: darkgreen;
-      margin-top: -1.35em;
-      margin-left: 3.5em; }
-    .paperAd .status span:nth-child(3) {
-      color: red;
-      margin-top: -1.35em;
-      margin-left: 3.5em; }
+    .paperAd .status .active {
+      color: darkgreen; }
+    .paperAd .status .deactive {
+      color: red; }
   .paperAd .buttonsStat {
     margin: 3.9em 0 0 -14em;
     height: 2em;
-    width: 15.3em; }
-    .paperAd .buttonsStat button:nth-child(1) {
+    width: 16.3em; }
+    .paperAd .buttonsStat a {
+      display: inline-block;
       color: green;
-      width: 7em;
-      height: 2em; }
-    .paperAd .buttonsStat button:nth-child(2) {
+      margin-top: 0.3em;
+      font-size: 1.1em;
+      text-decoration: none;
+      background-color: #EEEEEE;
+      padding: 0.13em 0.78em 0.13em 0.38em;
+      border-top: 0.06em solid #CCCCCC;
+      border-right: 0.06em solid #333333;
+      border-bottom: 0.06em solid #333333;
+      border-left: 0.06em solid #CCCCCC; }
+    .paperAd .buttonsStat .deactiveBtn {
+      display: inline-block;
       color: red;
-      width: 8em;
-      height: 2em; }
+      margin-top: 0.3em;
+      font-size: 1.1em;
+      text-decoration: none;
+      background-color: #EEEEEE;
+      padding: 0.13em 0.78em 0.13em 0.38em;
+      border-top: 0.06em solid #CCCCCC;
+      border-right: 0.06em solid #333333;
+      border-bottom: 0.06em solid #333333;
+      border-left: 0.06em solid #CCCCCC; }
   .paperAd .buttonsEdit {
     width: 16.5em;
     height: 2em;
