--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -20,6 +20,7 @@
         
         
         p{
+            text-decoration: none;
             margin: auto;
             margin-top: 1em;
         }
