--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -19,6 +19,7 @@
     }
     
     p{
+        text-decoration: none;
         margin: auto;
 //        margin-top: 1em;
     }
@@ -28,6 +29,13 @@
             width:26em;
     //        height: 5em;
             margin: auto;            
+        }
+    }
+    
+    .admin{
+        a{
+            color: black;
+            text-decoration: none;
         }
     }
 }
