--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -24,14 +24,12 @@
 //        margin-top: 1em;
     }
     
-    a{
-        img{
-            width:26em;
+    img{
+        width: 80%;
     //        height: 5em;
-            margin: auto;            
-        }
+        margin: auto;            
     }
-    
+
     .admin{
         a{
             color: black;
