--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -179,9 +179,9 @@
 
             input{
     //            border: thin orange solid;
-                width: 21.5em;
-                margin-top: 1.5em;
-                margin-left: 0.3em;
+                width: 60%;
+                margin-top: 2.5em;
+                margin-left: -2em;
 //                display: inline-block;
             }
             
@@ -194,9 +194,10 @@
             }
             
             #Message{
-                width: 21.5em;
-                margin-top: 2em;
-                margin-left: 0.3em;
+//                width: 21.5em;
+                width: 60%;
+                margin-top: 2.5em;
+                margin-left: -2em;
             }
             
             #Send{
@@ -481,5 +482,15 @@
     
     section{
         padding-top: 10em;
+    }
+    
+    .pagination{
+        display: flex;
+        margin: 2em 0 0 7.9em;
+        font-size: 1.5em;
+
+        li{
+            margin-left: 2em; 
+        }
     }
 }
