--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -330,6 +330,8 @@
                 width: 22em;
                 margin: auto;
                 text-align: left;
+                font-family: Agency FB;
+                font-weight: normal;
 //                border: red solid thin;
             }
             img{
