--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -10,6 +10,8 @@ body{
     margin: 0;
     padding: 0;
     background-color: $primary-back-color;
+    font-family: Agency FB;
+    font-weight: normal;
 //    width: 100%;
 //    border: thin blue solid;
 //    max-width: 100vw;
