--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -353,7 +353,7 @@ section {
   padding-top: 5em;
   min-height: 60vh; }
 
-.image-slider {
+.image-slider a img {
   -webkit-flex: 1 1 100%;
   -ms-flex: 1 1 100%;
   flex: 1 1 100%;
@@ -675,14 +675,14 @@ section {
 [dir='rtl'] .slick-slide {
   float: right; }
 
-.slick-slide img {
+.slick-slide {
   display: block; }
 
-.slick-slide.slick-loading img {
+.slick-slide.slick-loading {
   display: none;
   margin-left: 16px; }
 
-.slick-slide.dragging img {
+.slick-slide.dragging {
   pointer-events: none;
   margin-left: 16px; }
 
@@ -895,11 +895,11 @@ section {
     margin: auto;
     width: 28em;
     height: 28em; }
-  .image-slider {
+  .image-slider a img {
     display: block;
     width: 100%;
     height: 100%;
-    margin: 0 1em 0 0.5em; }
+    margin: auto; }
   .slick-slide {
     display: none;
     float: left;
@@ -1034,11 +1034,12 @@ section {
     display: block;
     width: 100%;
     height: 100%;
-    margin: 0 1em 0 -0.1em; }
+    margin: auto; }
   .slick-slide {
     display: none;
     float: left;
-    margin-left: 0;
+    margin-left: -0.1em;
+    width: 100%;
     height: 100%;
     min-height: 1px; }
   .slick-slider .slick-track,
