--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -58,11 +58,11 @@
 //        border: thin darkblue solid;
     }
     
-    .image-slider{   
+    .image-slider a img{   
         display: block;
         width: 100%;
         height: 100%;
-        margin: 0 1em 0 0.5em;
+        margin: auto;
 //        border: red solid thin;
     }
     
@@ -274,7 +274,7 @@
             }
         }
 
-        .img-slider {
+        .img-slider{
             margin: auto;
             width: 30em;
             height: 30em;
@@ -287,18 +287,18 @@
             height: 100%;
         //	position: relative;
         //    margin-top: 10em;
-            margin: 0 1em 0 -0.1em;
-//            border: red solid thin;
+            margin: auto;
+//            border: blue solid thin;
         }
 
        .slick-slide{
             display: none;
             float: left;
-            margin-left: 0;
-        //    width: 100%;
+            margin-left: -0.1em;
+            width: 100%;
             height: 100%;
             min-height: 1px;
-    //        border: black thin solid;
+//            border: black thin solid;
         }
 
         .slick-slider .slick-track,
