--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -144,11 +144,11 @@
 
     .label{
         width: 5.5em;
-        font-size: 2em;
+        font-size: 2.5em;
         margin-left: 3em;
         margin-top: 1em;
         display: inline-block;
-//        border: green thin solid;
+        border: green thin solid;
     }
 
     .input{
@@ -167,7 +167,7 @@
             font-weight: normal;
             font-size: 3em;
             margin: auto;
-            margin-top: 0.2em;
+            margin-top: -0.8em;
         }
     }
 
@@ -183,7 +183,7 @@
     }
 
     .formAdmin{
-        margin-right: 8em;
+        margint: auto;
     }
 
     .profile{
@@ -213,11 +213,44 @@
 //        width: 
     }
 
+.headingF{
+    background-color: $secondary-back-color;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    height: 6.5em;
+    display: flex;
+    top: 0;
+    left: 0;
+    
 
+    p{
+        text-decoration: none;
+        margin: auto;
+    }
+    
+    a{
+        margin: auto;
+        width: 85%;
+        img{
+            width: 100%;
+        //        height: 5em;
+            margin: auto;
+        }
+    }
 
-
-
-
+    .admin{
+        a{
+            color: black;
+            text-decoration: none;
+            text-align: center;
+            display: inline-block;
+            margin: 3em 1em 0 0;
+        }
+    }
+}
 
 
 
