--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -12,17 +12,24 @@
         width: 100%;
         z-index: 1000;
     
-        img,.headImg{
-            width: 85%;
-//            height: 5em;
+        a{
             margin: auto;
+            width: 75%;
+            .headImg{
+                width: 100%;
+                margin: auto;
+            }
         }
-        
-        
-        p{
-            text-decoration: none;
-            margin: auto;
-            margin-top: 1em;
+
+        .admin{
+            a{
+                color: black;
+                font-size: 1.5em;
+                text-decoration: none;
+                text-align: center;
+                display: inline-block;
+                margin: 3.5em 0 0 0;
+            }
         }
         
         #Bars {
@@ -230,10 +237,24 @@
         
        .heading{
            height: 11em;
-           
-            img{
-                width: 90%;
+           a{
                 margin: auto;
+                width: 75%;
+                .headImg{
+                    width: 100%;
+                    margin: auto;
+                }
+            }
+           
+            .admin{
+                a{
+                    color: black;
+                    font-size: 2em;
+                    text-decoration: none;
+                    text-align: center;
+                    display: inline-block;
+                    margin: 1.5em 1em 0 0;
+                }
             }
         }
         
@@ -247,7 +268,7 @@
             z-index: 1000;
             top: 0;
             left: 0;
-            margin-top: 5.25em;
+            margin-top: 5.2em;
             background-color: $secondary-back-color;
             
             ul{
@@ -390,10 +411,10 @@
             }
         }
 
-            .form{
+        .form{
 //           border: thin red solid;
             #Form{
-//                border: thin green solid;
+//               border: thin green solid;
                 width: 38em;
                 margin: auto;
 
@@ -404,12 +425,11 @@
                     display: inline-block;
                 }
 
-                input,select{
+                input{
 //                    border: thin orange solid;
                     width: 25em;
                     margin: 1.5em 0 0 1.5em;
                     display: inline-block;
-//                    border: blue thin solid;
                 }
 
                 #Email{
@@ -449,11 +469,25 @@
         width: 100%;
         height: 10.5em;
 //        border: thin red solid;
-        
-            img{
-                width: 60%;
+        a{
+            margin: auto;
+            width: 85%;
+            .headImg{
+                width: 100%;
                 margin: auto;
             }
+        }
+        
+        .admin{
+            a{
+                color: black;
+                font-size: 3em;
+                text-decoration: none;
+                text-align: center;
+                display: inline-block;
+                margin: 0.5em 1em 0 0;
+            }
+        }
     }
     
     #Bars{
@@ -493,6 +527,126 @@
 
         li{
             margin-left: 2em; 
+        }
+    }
+    
+    .headingF{
+        background-color: $secondary-back-color;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
+        height: 6.5em;
+        display: flex;
+        top: 0;
+        left: 0;
+    
+        p{
+            text-decoration: none;
+            margin: auto;
+        }
+
+        a{
+            margin: auto;
+            width: 85%;
+            img{
+                width: 100%;
+            //        height: 5em;
+                margin: auto;
+            }
+        }
+
+        .admin{
+            a{
+                color: black;
+                text-decoration: none;
+                font-size: 2em;
+                text-align: center;
+                display: inline-block;
+                margin: 0 1em 0 0;
+            }
+        }
+    }
+
+    
+    .headingA{
+        background-color: $secondary-back-color;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
+        height: 10.5em;
+        display: flex;
+        top: 0;
+        left: 0;
+        
+        p{
+            text-decoration: none;
+//            margin: auto;
+             color: black;
+                text-decoration: none;
+//                font-size: 3em;
+                text-align: center;
+                display: inline-block;
+                margin: 0 0em 0 -2em;
+        }
+
+        a{
+            margin: auto;
+            width: 100%;
+            img{
+                width: 100%;
+                margin: auto;
+            }
+        }
+
+        .admin{
+            a{
+                color: black;
+                text-decoration: none;
+                font-size: 3em;
+                text-align: center;
+                display: inline-block;
+                margin: 0 0em 0 0;
+            }
+        }
+    }
+    
+    .main-heading h2 {
+        color: black;
+        text-align: center;
+        font-family: Agency FB;
+        font-weight: normal;
+        font-size: 5em;
+        margin: auto;
+        margin-top: -1.5em;
+        margin-bottom: 1em;
+    }
+    
+    label{
+        font-size: 1.2em;
+    }
+    
+    .form{
+        #Form{
+            label{
+                font-size: 1.3em;
+                margin-top: -0.5em;
+            }
+            
+            input{
+                width: 25em;
+                margin: 1.5em 0 0 0em;
+                display: inline-block;
+            }
+            
+            .description{
+                width: 26em;
+                min-height: 5em;
+                margin: -1.2em 0 0 12em;
+            }
         }
     }
 }
