--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -192,14 +192,46 @@
         font-size: 1.5em;
         
         h3{
-            margin-right: 15em;
+            display: block;
+            margin-left: 15em;
             text-align: center;
+            width: 5em;
+//            border: blue thin solid;
+        }
+        
+        #EmailUs{
+            margin-left: 14.16em;
         }
         
         h4{
-            margin-top: -2.5em;
-            margin-left: 10em;
+            display: block;
+            width: 15em;
+            height: 1.64em;
+            margin-top: -2.89em;
+            margin-left: 23.5em;
             text-align: center;
+//            border: red solid thin;
+        }
+        
+        #EmailU{
+//            border: blue solid thin;
+            margin-left: 26.8em;
+        }
+        
+        a{
+            display: block;
+            margin: auto auto 1em auto;
+            width: 9.8em;
+            font-size: 1.25em;
+            text-align: center;
+            text-decoration: none;
+            background-color: #EEEEEE;
+            color: #333333;
+            padding: 0.13em 0.55em 0.13em 0.38em;
+            border-top: 0.06em solid #CCCCCC;
+            border-right: 0.06em solid #333333;
+            border-bottom: 0.06em solid #333333;
+            border-left: 0.06em solid #CCCCCC;
         }
     }
 
